# VierGewinntSeminararbeit

Programm/: start.bat
Programm/GUI/resources/: app-update.yml  app.asar
Quellcode/connect4_server/: Cargo.toml
Quellcode/connect4_server/src/: connect4ai.rs  lib.rs  main.rs
