[package]
name = "connect4_server"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
actix-cors = "0.6.4"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.10.0"